--- a/packages/app-main/package.json
+++ b/packages/app-main/package.json
@@ -15,11 +15,13 @@
 		"@dnd-kit/modifiers": "^9.0.0",
 		"@dnd-kit/sortable": "^10.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
+		"@langchain/core": "^1.1.11",
+		"@langchain/langgraph": "^1.0.7",
+		"@langchain/openai": "^1.2.1",
 		"@prisma/adapter-mssql": "^7.2.0",
 		"@prisma/adapter-pg": "^6.18.0",
 		"@prisma/client": "catalog:",
-    "@prisma/client-runtime-utils": "7.2.0",
-		"prisma": "catalog:",
+		"@prisma/client-runtime-utils": "7.2.0",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "catalog:",
 		"@radix-ui/react-dialog": "catalog:",
@@ -39,9 +41,11 @@
 		"clsx": "catalog:",
 		"common": "workspace:*",
 		"framer-motion": "catalog:",
+		"langchain": "^1.2.6",
 		"lucide-react": "catalog:",
 		"next": "catalog:",
 		"next-themes": "catalog:",
+		"prisma": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
 		"recharts": "^2.15.1",
