--- a/packages/python-backend/pyproject.toml
+++ b/packages/python-backend/pyproject.toml
@@ -17,3 +17,10 @@ dependencies = [
 
 [dependency-groups]
 dev = ["pytest>=8.0", "ruff>=0.8.0", "mypy>=1.13.0"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
