sql to postgres

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"build": "pnpm --filter app build",
 		"start": "pnpm --filter app start",
 		"lint": "pnpm -r lint",
-		"prisma:generate": "pnpm --filter @chat-assistant/database generate",
-		"prisma:push": "pnpm --filter @chat-assistant/database db:push",
+		"prisma:generate": "prisma generate",
+		"prisma:push": "prisma db push",
 		"prisma:seed": "cd packages/database && pnpm tsx prisma/seed.ts",
 		"python:dev": "cd packages/python-backend/src && dotenv -e ../../../.env -v PYTHONPATH=. -- uv run uvicorn assistant.main:app --reload --port 8000",
 		"python:install": "cd packages/python-backend && uv sync",
