--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -15,16 +15,19 @@
 		}
 	},
 	"scripts": {
-		"generate": "prisma generate",
-		"db:push": "prisma db push"
+		"generate": "dotenv -e ../../.env -- prisma generate",
+		"db:push": "dotenv -e ../../.env -- prisma db push"
 	},
 	"dependencies": {
+		"@prisma/adapter-pg": "^6.18.0",
 		"@prisma/client": "catalog:",
-		"@prisma/adapter-mssql": "^7.2.0",
 		"@prisma/client-runtime-utils": "7.2.0",
-		"dotenv": "^16.4.5"
+		"dotenv": "^16.4.5",
+		"pg": "^8.17.2"
 	},
 	"devDependencies": {
+		"@types/pg": "^8.16.0",
+		"dotenv-cli": "^11.0.0",
 		"prisma": "catalog:",
 		"tsx": "catalog:",
 		"typescript": "catalog:"
